# asterisms-py

./: .envrc  .gitignore  CLAUDE.md  HIP_KERNEL_USAGE.md  README.md  README_ROCM.md  Untitled1.ipynb  benchmark_gpu.py  check_duplicates.py  configure_instrument.py  coordinate_transformations.py  crossmatch_tycho_gaia.py  generate_3d_analysis.py  generate_reports.py  generate_score_sampler.py  generate_universal_reports.py  metrics_testing.ipynb  polars+pytorch.ipynb  polars.ipynb  processing_results.ipynb  projections.py  pyproject.toml  rescore_snakes.py  run_all.py  run_universal.py  runnotebook.sh  settings.ini  shell.nix  starplot_orion.ipynb  test_gpu.py  testing.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  loading tycho-checkpoint.ipynb  polars+pytorch-checkpoint.ipynb  polars-checkpoint.ipynb  processing_results-checkpoint.ipynb  testing-checkpoint.ipynb  tycho2_dat_to_parquet-checkpoint.ipynb
_testing/: starplot_orion.ipynb
asterisms_py/: _modidx.py  core.py  tycho2_ingest.py  tycho2_main.py
hip_square/: __init__.py  build.sh  hip_binding.cpp  square_kernel.hip
hip_triangle/: README.md  __init__.py  build.sh  hip_binding.cpp  setup.py  triangle_kernel.hip
nbs/: 00_tycho2_dat_to_parquet.ipynb  01_polars+pytorch.ipynb  01a_core.ipynb  02_processing_results.ipynb  Untitled.ipynb  index.ipynb  metrics_testing.ipynb  nbdev.yml  sidebar.yml
support/: gaia_dr3_download.py  gaia_to_parquet.py
tests/: test_hip_kernels.py
