[tool.poetry]
name = "asterisms-py"
version = "0.1.0"
description = ""
authors = ["Mike Rosseel <mike.rosseel@gmail.com>"]
readme = "README.md"
packages = [{include = "asterisms_py"}]

[tool.poetry.dependencies]
python = "3.11.5"
torch = "^2.0.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
polars = "^0.19.3"
tqdm = "^4.66.1"
starplot = "^0.3.1"
scipy = "^1.11.3"
pyarrow = "^13.0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab-vim = "^4.0.3"
nbdev = "^2.3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
