[project]
name="asterisms-py"
version = "0.1.0"
description = ""
authors = [{name = "Mike Rosseel", email = "mike.rosseel@gmail.com"}]
readme = "README.md"
requires-python=">=3.11"
dependencies = [
    "numpy>=1.24.3",
    "pandas>=2.0.1",
    "matplotlib>=3.7.1",
    "polars>=0.19.3",
    "tqdm>=4.66.1",
    "starplot>=0.3.1",
    "scipy>=1.11.3",
    "pyarrow>=17.0.0",
    "skyfield>=1.45",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab-vim>=4.0.3",
    "nbdev>=2.3.12",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["asterisms_py*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
